style password visibility checkbox and image fix 2

--- a/_sass/_pages/_page__post.scss
+++ b/_sass/_pages/_page__post.scss
@@ -21,38 +21,38 @@
   .form-control {
     display: grid;
     grid-template-columns: 1em auto;
-    gap: 0.5em;
+    gap: 1em;
 
-    /*input[type="checkbox"] {
+    input[type="checkbox"] {
       -webkit-appearance: none;
       appearance: none;
-      background-color: #fff;
+
       margin: 0;
-
-      font: inherit;
-      color: currentColor;
-      width: 1.15em;
-      height: 1.15em;
-      border: 0.15em solid currentColor;
-      border-radius: 0.15em;
-      transform: translateY(-0.075em);
-
       display: grid;
       place-content: center;
+      width: 1.15em;
+      height: 1.15em;
+
+      font: inherit;
+
+      color: white;
+      background-color: white;
+      border-color: white;
+      outline: 2px solid $text-dark-color;
+
+      border: 0.15em solid;
+      border-radius: 0.15em;
+      border: 2px solid;
+      border-radius: 0;
+
+      
     }
 
-    input[type="checkbox"]::before {
-      content: "";
-      width: 0.65em;
-      height: 0.65em;
-      transform: scale(0);
-      transition: 120ms transform ease-in-out;
-      box-shadow: inset 1em 1em var(--form-control-color);
+    input[type="checkbox"]:checked {
+      background-color: $accent-color;
+      transition-duration: .25s;
+      transition-property: background-color;
     }
-
-    input[type="checkbox"]:checked::before {
-      transform: scale(1);
-    }*/
   }
 
   .button--fill {
